Refactor bugs found (random stuff)